<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardBackgroundColor="@color/purple"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/acme"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"/>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/acme"
                android:text="@string/question"
                android:textColor="@color/purple"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <RadioButton
                    android:id="@+id/amiableAnswer"
                    style="@style/RadioButtonStyle"
                    android:text="@string/amiable_answer" />

                <RadioButton
                    android:id="@+id/analyticalAnswer"
                    style="@style/RadioButtonStyle"
                    android:text="@string/analytical_answer" />

                <RadioButton
                    android:id="@+id/expressiveAnswer"
                    style="@style/RadioButtonStyle"
                    android:text="@string/expressive_answer" />

                <RadioButton
                    android:id="@+id/driverAnswer"
                    style="@style/RadioButtonStyle"
                    android:text="@string/driver_answer" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/btPrev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_prev"
            android:layout_weight="0.6"/>

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textSize="22sp"
            android:fontFamily="@font/acme"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page"
            android:textSize="22sp"
            android:fontFamily="@font/acme"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/btNext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_next"
            android:layout_weight="0.6"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>