<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.result.ResultActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:cardBackgroundColor="@color/purple"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/result"
                    android:fontFamily="@font/acme"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.result.ResultActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_gravity="center"
                    android:layout_height="300dp"
                    android:layout_margin="25dp"
                    app:cardCornerRadius="20dp"
                    android:elevation="25dp">

                    <ImageView
                        android:id="@+id/socialStyleImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_ana"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="25dp"
                    app:cardCornerRadius="20dp"
                    android:elevation="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/tab_amiable"
                                style="@style/CardViewPercentage">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:id="@+id/amiableScore"
                                            style="@style/NumberPercentage"/>
                                        <TextView
                                            android:text="@string/percent"
                                            style="@style/Percentage"/>
                                    </LinearLayout>
                                    <TextView
                                        android:text="@string/amiable"
                                        style="@style/TextViewTitle"/>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/tab_analytical"
                                style="@style/CardViewPercentage">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:id="@+id/analyticalScore"
                                            style="@style/NumberPercentage"/>
                                        <TextView
                                            android:text="@string/percent"
                                            style="@style/Percentage"/>
                                    </LinearLayout>
                                    <TextView
                                        android:text="@string/analytical"
                                        style="@style/TextViewTitle"/>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/tab_expressive"
                                style="@style/CardViewPercentage">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:id="@+id/expressiveScore"
                                            style="@style/NumberPercentage"/>
                                        <TextView
                                            android:text="@string/percent"
                                            style="@style/Percentage"/>
                                    </LinearLayout>
                                    <TextView
                                        android:text="@string/expressive"
                                        style="@style/TextViewTitle"/>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/tab_driver"
                                android:layout_marginEnd="0dp"
                                style="@style/CardViewPercentage">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">
                                        <TextView
                                            android:id="@+id/driverScore"
                                            style="@style/NumberPercentage"/>
                                        <TextView
                                            android:text="@string/percent"
                                            style="@style/Percentage"/>
                                    </LinearLayout>
                                    <TextView
                                        android:text="@string/driver"
                                        style="@style/TextViewTitle"/>
                                </LinearLayout>
                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/titleResult"
                            android:text="@string/amiable"
                            android:textSize="25sp"
                            android:textColor="@color/purple"
                            android:paddingTop="10dp"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:text="@string/character" />

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/characteristics"
                            android:text="@string/desc_ana"
                            android:textStyle="normal"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:text="@string/strength"
                            android:textSize="17sp"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/strength"
                            android:text="@string/strengths_ana"
                            android:textStyle="normal"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:text="@string/weakness"
                            android:textSize="17sp"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/weakness"
                            android:text="@string/weakness_ana"
                            android:textStyle="normal"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:text="@string/solution"
                            android:textSize="17sp"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/solutions"
                            android:text="@string/solution_ana"
                            android:textStyle="normal"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:text="@string/how_to_communicate"
                            android:textSize="17sp"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/howToComunicate"
                            android:text="@string/how_to_communicate_ana"
                            android:textStyle="normal"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:text="@string/role"
                            android:textSize="17sp"/>

                        <TextView
                            style="@style/TextViewResult"
                            android:id="@+id/role"
                            android:text="@string/role_ana"
                            android:textStyle="normal"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="25dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="15dp"
                        android:backgroundTint="@color/purple"
                        android:elevation="20dp">

                        <ImageView
                            android:id="@+id/start_again"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/take_again"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.3"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="15dp"
                        android:backgroundTint="@color/light_purple"
                        android:elevation="20dp">

                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/share"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>